--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 # Basic Information 
-title: Yanbo Zhang (张延博)
-position: Postdoctoral Research Fellow
-affiliation: Nanyang Technological University
-email: zhang.yanbo (at) ntu.edu.sg
+title: Yanlin LI (李岩霖)
+position: Undergraduate 
+affiliation: Shandong University
+email: yanlinli (at) mail.sdu.edu.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
