--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ email: yanlinli (at) mail.sdu.edu.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Yanbo Zhang NTU
-description: Personal homepage of Yanbo Zhang
-canonical: https://yanbozhang003.github.io/
+keywords: Yanlin LI SDU
+description: Personal homepage of Yanlin LI
+canonical: https://liyanlin06.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
