--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 
 # Basic Information 
-title: Yanlin LI (李岩霖)
+title: Yanlin Li
 position: Undergraduate 
 affiliation: Shandong University
 email: yanlinli (at) mail.sdu.edu.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Yanlin LI SDU
-description: Personal homepage of Yanlin LI
+keywords: Yanlin Li SDU
+description: Personal homepage of Yanlin Li
 canonical: https://liyanlin06.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/citations?hl=en&tzom=-480&user=h58MNTYAAAAJ&view_op=list_works&gmla=AH70aAUsdKfG2X8qlilZ2Rh77ee7H_PYPQeeh8MMycO9e0eDY-0G9lbCHNcak0lwtLubpvzj-oyKI9DNFR54uSCw
+# google_scholar: https://scholar.google.com/citations?hl=en&tzom=-480&user=h58MNTYAAAAJ&view_op=list_works&gmla=AH70aAUsdKfG2X8qlilZ2Rh77ee7H_PYPQeeh8MMycO9e0eDY-0G9lbCHNcak0lwtLubpvzj-oyKI9DNFR54uSCw
 cv_link: ./assets/files/CV/Yanbo_CV2.pdf
-github_link: https://yanbozhang003.github.io/
+github_link: https://github.com/liyanlin06/
 # wechat_link: https://yanbozhang003.github.io/
 # linkedin: https://www.linkedin.com/
 
