--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ linkedin: https://www.linkedin.cn/in/yanlin-li-2b411826b/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/profile/me.jpg
+avatar: ./assets/img/profile/me2.jpg
 favicon: ./assets/img/SDU.png
 favicon_dark: ./assets/img/SDU.png
 
