--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 
 # Basic Information 
 title: Yanlin Li
-position: Undergraduate 
-affiliation: Shandong University
-email: yanlinli (at) mail.sdu.edu.cn
+position: UndergraduateMaster of Computing(AI) 
+affiliation: National University of Singapore
+email: yanlin.li (at) u.nus.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Yanlin Li SDU
+keywords: Yanlin Li SDU NUS
 description: Personal homepage of Yanlin Li
 canonical: https://liyanlin06.github.io/
 
