--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Basic Information 
 title: Yanlin Li
-position: UndergraduateMaster of Computing(AI) 
+position: Master of Computing(AI) 
 affiliation: National University of Singapore
 email: yanlin.li (at) u.nus.edu
 
