--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ canonical: https://liyanlin06.github.io/
 cv_link: ./assets/files/CV20240701.pdf
 github_link: https://github.com/liyanlin06/
 # wechat_link: https://yanbozhang003.github.io/
-linkedin: https://www.linkedin.cn/in/yanlin-li-2b411826b/
+# linkedin: https://www.linkedin.cn/in/yanlin-li-2b411826b/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
