--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://liyanlin06.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-# google_scholar: https://scholar.google.com/citations?hl=en&tzom=-480&user=h58MNTYAAAAJ&view_op=list_works&gmla=AH70aAUsdKfG2X8qlilZ2Rh77ee7H_PYPQeeh8MMycO9e0eDY-0G9lbCHNcak0lwtLubpvzj-oyKI9DNFR54uSCw
+google_scholar: https://scholar.google.com/citations?user=YOcLsPMAAAAJ&hl=en
 cv_link: ./assets/files/CV20241028.pdf
 github_link: https://github.com/liyanlin06/
 # wechat_link: https://yanbozhang003.github.io/
