--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,5 +7,5 @@ main:
     pdf: https://link.springer.com/chapter/10.1007/978-3-031-71464-1_18
     # code: https://github.com/xieyaxiongfly/SWAN_src_AP
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    # bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:V4PEMbqI4roJ:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCPJC8:AFWwaeYAAAAAZaOJPC8qlxiX0cJ3OIk6AHyzTtQ&scisig=AFWwaeYAAAAAZaOJPMU77axRMbxfl0a7YQa0_8I&scisf=4&ct=citation&cd=-1&hl=en
+    bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:hfKAb3wG4hMJ:scholar.google.com/&output=citation&scisdr=ClG-DYqpEPrCq_GLjnI:AFWwaeYAAAAAZ0SNlnI9cKv5Xh0lQL5jYI7JMD8&scisig=AFWwaeYAAAAAZ0SNlvI9GQZdAzo71WOnB6_16ig&scisf=4&ct=citation&cd=-1&hl=en
     image: ./assets/img/publications_img/KD-Eye.png
