--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ email: yanlin.li (at) u.nus.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Yanlin Li SDU NUS
+keywords: Yanlin Li SDU NUS 山东大学 新加坡国立大学
 description: Personal homepage of Yanlin Li
 canonical: https://liyanlin06.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=YOcLsPMAAAAJ&hl=en
-cv_link: ./assets/files/CV20241028.pdf
+cv_link: ./assets/files/CV20250224.pdf
 github_link: https://github.com/liyanlin06/
 # wechat_link: https://yanbozhang003.github.io/
 # linkedin: https://www.linkedin.cn/in/yanlin-li-2b411826b/
