--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email: yanlin.li (at) u.nus.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Yanlin Li SDU NUS 山东大学 新加坡国立大学
+keywords: Yanlin Li SDU NUS 山东大学 新加坡国立大学 李岩霖
 description: Personal homepage of Yanlin Li
 canonical: https://liyanlin06.github.io/
 
