--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -9,3 +9,12 @@ main:
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:hfKAb3wG4hMJ:scholar.google.com/&output=citation&scisdr=ClE57fwKEPrCq1dfU6k:AFWwaeYAAAAAZ-JZS6kEvELQo-rTYp3GlEUlOD0&scisig=AFWwaeYAAAAAZ-JZS_9Hp2Swwdu1kpHMvmAaK80&scisf=4&ct=citation&cd=-1&hl=en
     image: ./assets/img/publications_img/KD-Eye.png
+
+  - title: "Evaluating MLLMs with Multimodal Multi-image Reasoning Benchmark"
+    authors: Ziming Cheng, Binru Xu, Lisheng Gong, Zuhe Song, ..., <strong>Yanlin Li</strong>, ..., Xiaojie Wang, Fangxiang Feng
+    conference_short: Preprint
+    conference: arXiv, 2025
+    pdf: https://arxiv.org/abs/2506.04280
+    # code: https://github.com/xieyaxiongfly/SWAN_src_AP
+    # page: https://class-il.mpi-inf.mpg.de/mnemonics/
+    image: ./assets/img/publications_img/mmrb.png
