--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -10,6 +10,17 @@ main:
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:hfKAb3wG4hMJ:scholar.google.com/&output=citation&scisdr=ClE57fwKEPrCq1dfU6k:AFWwaeYAAAAAZ-JZS6kEvELQo-rTYp3GlEUlOD0&scisig=AFWwaeYAAAAAZ-JZS_9Hp2Swwdu1kpHMvmAaK80&scisf=4&ct=citation&cd=-1&hl=en
     image: ./assets/img/publications_img/KD-Eye.png
 
+  - title: "MIST: Towards Multi-dimensional Implicit Bias and Stereotype Evaluation of LLMs via Theory of Mind"
+    authors: <strong>Yanlin Li</strong>, Hao Liu, Huimin Liu, Yinwei Wei, Yupeng Hu*
+    conference_short: Preprint
+    conference: arXiv, 2025
+    pdf: https://arxiv.org/abs/2506.14161
+    # code: https://github.com/xieyaxiongfly/SWAN_src_AP
+    # page: https://class-il.mpi-inf.mpg.de/mnemonics/
+    image: ./assets/img/publications_img/mist.png
+
+Collaborative papers:
+
   - title: "Evaluating MLLMs with Multimodal Multi-image Reasoning Benchmark"
     authors: Ziming Cheng, Binru Xu, Lisheng Gong, Zuhe Song, ..., <strong>Yanlin Li</strong>, ..., Xiaojie Wang, Fangxiang Feng
     conference_short: Preprint
