--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ github_link: https://github.com/liyanlin06/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/profile/me.jpg
+avatar: ./assets/img/profile/liyanlin_ai.jpg
 favicon: ./assets/img/fullcolorlogo_v.jpg
 favicon_dark: ./assets/img/fullcolorlogo_v.jpg
 
