--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -26,3 +26,12 @@ main:
     # code: https://github.com/xieyaxiongfly/SWAN_src_AP
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     image: ./assets/img/publications_img/mmrb.png
+
+    - title: "The ACM Multimedia 2025 Grand Challenge of Truthful and Responsible Multimodal Learning"
+    authors: Xudong Han, Kai Liu, <strong>Yanlin Li</strong>, Hao Li, Zheng Wang
+    conference_short: ACM MM GC 2025
+    conference: The 33nd ACM International Conference on Multimedia <strong>(ACM MM)</strong>, 2025
+    pdf: https://dl.acm.org/doi/10.1145/3746027.3762048
+    # code: https://github.com/xieyaxiongfly/SWAN_src_AP
+    # page: https://class-il.mpi-inf.mpg.de/mnemonics/
+    image: ./assets/img/publications_img/trml.png
