--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,14 @@
 main:
 
+  - title: "Benchmarking Unified Any-to-Any Interleaved Multimodal Learning"
+    authors: <strong>Yanlin Li</strong>, Minghui Guo, Kaiwen Zhang, Shize Zhang, Yiran Zhao, Haodong Li, Congyue Zhou, Weijie Zheng, Yushen Yan, Shengqiong Wu, Wei Ji, Lei Cui, Furu Wei, Hao Fei*, Mong-Li Lee, Wynne Hsu
+    conference_short: CVPR 2026
+    conference: The Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2026. <strong>(CCF-A)</strong>
+    # pdf: https://link.springer.com/chapter/10.1007/978-3-031-71464-1_18
+    # code: https://github.com/xieyaxiongfly/SWAN_src_AP
+    # page: https://class-il.mpi-inf.mpg.de/mnemonics/
+    image: ./assets/img/publications_img/UniM.png
+    
   - title: "KD-Eye: Lightweight Pupil Segmentation For Eye Tracking on VR Headsets via Knowledge Distillation"
     authors: <strong>Yanlin Li</strong>, Ning Chen, Guangrong Zhao, Yiran Shen*
     conference_short: WASA 2024
